--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -53,4 +54,14 @@ dependencies {
     // Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+
+    // Coil
+    implementation 'io.coil-kt:coil:2.2.2'
+
+    // ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 }
