--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
 
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    // RecyclerView 최신버전 : concatAdapter
+    implementation "androidx.recyclerview:recyclerview:1.3.0"
 }
