--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,9 @@ dependencies {
 
     // RecyclerView 최신버전 : concatAdapter
     implementation "androidx.recyclerview:recyclerview:1.3.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.1"
 }
